fix: Tolerate `BasicTable` containment by right-aligned `TextBlock`

--- a/src/scss/BasicTable.scss
+++ b/src/scss/BasicTable.scss
@@ -9,7 +9,7 @@
 	.TableWrapper--BasicTable--align--right {
 		@include media($mq-tablet_up) {
 			margin-left: auto;
-			width: cols_pct(7);
+			width: $var--grid-7; // tolerate containment by right-aligned TextBlock, for instance
 		}
 	}
 
